# mbrc-plugin

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  COPYING  CREDITS.md  Cargo.toml  CodeAnalysis.props  Constants.cs  Directory.Build.props  Directory.Packages.props  ErrorHandler.cs  FilteringSelection.cs  IPlugin.cs  InfoWindow.Designer.cs  InfoWindow.cs  MBRC.sln  MBRC.sln.DotSettings  MB_MWREMOTE.csproj  MB_MWREMOTE.sln  MB_REMOTE.XML  Mapper.cs  Messenger.cs  MusicBeeInterface.cs  PROTOCOL.md  Plugin.cs  ProtocolHandler.cs  README.md  SettingsController.cs  SettingsMenuHandler.cs  SettingsPanel.Designer.cs  SettingsPanel.cs  SocketServer.cs  SongInfo.cs  UnsupportedPanel.Designer.cs  UnsupportedPanel.cs  UpdateChecker.cs  UserSettings.cs  app.config  (+13 more)
mbrc-core/: Cargo.toml  CheckboxExtension.cs  FilteringSelection.cs  GlobalSuppressions.cs  InfoWindow.Designer.cs  InfoWindow.cs  PluginBootstrap.cs  RemoteBootstrap.cs  SearchSource.cs  TinyMessenger.cs  build.rs  mbrc-core.csproj  packages.config
mbrc-core/Core/: IMusicBeeRemote.cs  IMusicBeeRemotePlugin.cs  MusicBeeDependencies.cs  MusicBeeRemote.cs  MusicBeeRemotePlugin.cs  RemoteBootstrap.cs
mbrc-core/Core/ApiAdapters/: IInvokeHandler.cs  ILibraryApiAdapter.cs  INowPlayingApiAdapter.cs  IOutputApiAdapter.cs  IPlayerApiAdapter.cs  IPlayerStateAdapter.cs  IQueueAdapter.cs  ITrackApiAdapter.cs
mbrc-core/Core/Caching/: CacheInfo.cs  ICacheInfoRepository.cs  IRepository.cs
mbrc-core/Core/Commands/: CommandExecutor.cs  CommandPermissions.cs  ExecutionStatus.cs  ExecutorHelper.cs  ICommand.cs  LimitedCommand.cs  ProtocolConfiguration.cs  configuration.cs
mbrc-core/Core/Enumerations/: LastfmStatus.cs  MetaTag.cs  PlayerState.cs  QueueType.cs  Repeat.cs  ShuffleState.cs
mbrc-core/Core/Events/: BroadcastEvent.cs  IEvent.cs  InternalEvents.cs  MessageEvent.cs
mbrc-core/Core/Logging/: DebugSettingsModifiedEvent.cs  IPluginLogManager.cs  PluginLogManager.cs
mbrc-core/Core/Model/: CoverDataReadyEvent.cs  CoverPayload.cs  CoverStatusCodes.cs  IdentifiablePaginatedRequest.cs  IdentifiableRequest.cs  LyricCoverModel.cs  LyricsDataReadyEvent.cs  LyricsPayload.cs  OutputDevice.cs  PaginatedRequest.cs  PlayerStatus.cs  QueuePayload.cs  QueueResponse.cs  RadioStation.cs
mbrc-core/Core/Monitoring/: IPlayerStateMonitor.cs  IStateMonitor.cs  ITrackStateMonitor.cs  PlayerStateModel.cs  PlayerStateMonitor.cs  SupportTrackTemporalnformation.cs  TrackStateMonitor.cs  TrackTemporalInformation.cs  TrackTemporalnformation.cs
mbrc-core/Core/Network/: ActionLoggedEvent.cs  ClientDataUpdateEvent.cs  ClientManager.cs  ClientRepository.cs  Constants.cs  HttpSupport.cs  IPluginNetworking.cs  ProtocolHandler.cs  RangeChecker.cs  RemoteClient.cs  Router.cs  ServiceDiscovery.cs  SocketConnection.cs  SocketPacket.cs  SocketServer.cs  SocketTester.cs  Tools.cs  WebServer.cs
mbrc-core/Core/Podcasts/: ArtworkResponse.cs  EpisodeConverter.cs  PodcastApi.cs  PodcastEpisode.cs  PodcastHttpApi.cs  PodcastSubscription.cs  SubscriptionConverter.cs
mbrc-core/Core/Settings/: FilteringSelection.cs  IJsonSettingsFileManager.cs  ILegacySettingsMigration.cs  IStorageLocationProvider.cs  IVersionProvider.cs  JsonSettingsFileManager.cs  LegacySettingsMigration.cs  LimitedModeSettingsModel.cs  PersistanceManager.cs  PersistenceManager.cs  UserSettingsModel.cs
mbrc-core/Core/Support/: FilterHelper.cs  ISearchApi.cs  ISearchQueue.cs  SearchApi.cs  SearchQueue.cs
mbrc-core/Core/Threading/: LimitedTaskScheduler.cs
mbrc-core/Core/Utilities/: ArtworkUtilities.cs  Authenticator.cs  ControlRemoveExtension.cs  IdGenerator.cs  StateAction.cs  Utilities.cs
mbrc-core/Core/Windows/: WindowManager.cs  iWindowManager.cs
mbrc-core/Logging/: IPluginLogManager.cs  PluginLogManager.cs
mbrc-core/Monitoring/: IPlayerStateMonitor.cs  IStateMonitor.cs  ITrackStateMonitor.cs  PlayerPlayerStateMonitor.cs  PlayerStateModel.cs  PlayerStateMonitor.cs  TrackStateMonitor.cs  TrackTemporalnformation.cs
mbrc-core/PartyMode/Core/: ClientEventArgs.cs  PartyModeCommandHandler.cs  PartyModePanel.Designer.cs  PartyModePanel.cs  ServerCommandEventArgs.cs
mbrc-core/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
mbrc-core/Remote/: ControlRemoveExtension.cs  configuration.cs
mbrc-core/Remote/Commands/: CommandPermissions.cs  CoverPayload.cs  LimitedCommand.cs  LyricsPayload.cs  QueuePayload.cs  QueueResponse.cs
mbrc-core/Remote/Controller/: Controller.cs
mbrc-core/Remote/Core/: IApiAdapter.cs  ILibraryDataAdapter.cs  IRepository.cs  LibraryApiAdapter.cs  LibraryDataAdapter.cs
mbrc-core/Remote/Entities/: OutputDevice.cs  RadioStation.cs
mbrc-core/Remote/Enumerations/: LastfmStatus.cs  MetaTag.cs  PlayerState.cs  QueueType.cs  Repeat.cs  ShuffleState.cs
mbrc-core/Remote/Events/: BroadcastEvent.cs  MessageEvent.cs
mbrc-core/Remote/Interfaces/: ICommand.cs  IEvent.cs
mbrc-core/Remote/Model/: LyricCoverModel.cs
mbrc-core/Remote/Networking/: Constants.cs  ProtocolHandler.cs  RemoteClient.cs  ServiceDiscovery.cs  SocketConnection.cs  SocketPacket.cs  SocketServer.cs  SocketTester.cs
mbrc-core/Remote/Settings/: IStorageLocationProvider.cs  UserSettings.cs
mbrc-core/Remote/Utilities/: Authenticator.cs  IdGenerator.cs  StateAction.cs  Utilities.cs
mbrc-core/Tools/: NetworkTools.cs
mbrc-core/src/: config.rs  discovery.rs  lib.rs  logging.rs  replay_support.rs
mbrc-core/src/ffi/: callbacks.rs  dtos.rs  mod.rs  types.rs
mbrc-core/src/protocol/: constants.rs  messages.rs  mod.rs
mbrc-core/src/server/: mod.rs
mbrc-core/src/state/: mod.rs
mbrc-core/tests/: golden_replay.rs  handler_audit.rs  schema_drift.rs
mbrc-core/tests/golden/: legacy-unknown-android.jsonl  legacy-unknown-ios.jsonl  legacy-v2.jsonl  legacy-v3.jsonl  legacy-v4-android.jsonl  legacy-v4-ios.jsonl
mbrc-core/tests/schemas/: album_cover_batch_response.json  album_cover_params.json  album_cover_response.json  album_list_response.json  artist_list_response.json  browse_params.json  (+20 more)
tools/mbrc-cli/: Cargo.toml
tools/mbrc-tee-proxy/: Cargo.toml  README.md
(+929 files in other folders)
