[package]
name = "mbrc_core"
version = "0.2.0"
edition = "2021"

[lib]
name = "mbrc_core"
# rlib is needed so integration tests under `tests/` can link against the
# crate. cdylib is the actual production artifact for the C# host.
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tower = "0.5"
tower-service = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
if-addrs = "0.13"
socket2 = "0.5"

[build-dependencies]
csbindgen = "1.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
